force-app/main/default/objects/Contract/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <inlineHelpText>Abstrakt&apos;s Account # for vendor.</inlineHelpText>
    <label>Account #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>