force-app/main/default/objects/Contract/fields/Account_Manager_Phone__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager_Phone__c</fullName>
    <label>Account Manager Phone</label>
    <type>Phone</type>
</CustomField>