force-app/main/default/objects/Contract/fields/Active_Licenses__c.field-meta.xml
<CustomField>
    <fullName>Active_Licenses__c</fullName>
    <label>Active Licenses</label>
    <summarizedField>Service_Catalog__c.Active_Licenses__c</summarizedField>
    <summaryForeignKey>Service_Catalog__c.Contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>