force-app/main/default/objects/Contract/fields/Available_Licenses__c.field-meta.xml
<CustomField>
    <fullName>Available_Licenses__c</fullName>
    <formula>Total_Licenses__c -  Active_Licenses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Licenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>