force-app/main/default/objects/Contract/fields/Billing_Address_Validation_Status__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_Validation_Status__c</fullName>
    <label>Billing Address Validation Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>