force-app/main/default/objects/Contract/fields/Billing_Address_Validation_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_Validation_Timestamp__c</fullName>
    <label>Billing Address Validation Timestamp</label>
    <type>DateTime</type>
</CustomField>