force-app/main/default/objects/Contract/fields/Billing_Period__c.field-meta.xml
<CustomField>
    <fullName>Billing_Period__c</fullName>
    <label>Billing Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Semiannually</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
                <label>Annually</label>
            </value>
            <value>
                <fullName>As Needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>