force-app/main/default/objects/Contract/fields/Cancelation_Verbiage__c.field-meta.xml
<CustomField>
    <fullName>Cancelation_Verbiage__c</fullName>
    <label>Cancelation Verbiage</label>
    <type>TextArea</type>
</CustomField>