force-app/main/default/objects/Contract/fields/Chart_of_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Chart_of_Accounts__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chart of Accounts</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Chart_of_Accounts__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Chart_of_Accounts__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>