force-app/main/default/objects/Contract/fields/Contract_Amount__c.field-meta.xml
<CustomField>
    <fullName>Contract_Amount__c</fullName>
    <description>This formula multiplies the &quot;Total Amount by Billing Cycle&quot; by the &quot;Billing Period&quot;</description>
    <formula>CASE( Billing_Period__c,&quot;Monthly&quot;,12,&quot;Quarterly&quot;,4,&quot;Semiannually&quot;,2,&quot;Annually&quot;,1,0)* Total_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This formula multiplies the &quot;Total Amount by Billing Cycle&quot; by the &quot;Billing Period&quot;</inlineHelpText>
    <label>Contract Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>