force-app/main/default/objects/Contract/fields/Contract_Auto_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Contract_Auto_Renewal__c</fullName>
    <label>Contract Auto-Renewal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>