force-app/main/default/objects/Contract/fields/Days_Until_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Days_Until_Expiration__c</fullName>
    <formula>IF( (EndDate - TODAY())&lt;0,0,EndDate - TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Until Expiration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>