force-app/main/default/objects/Contract/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <description>Hold CTRL and select if you are choosing multiple departments.</description>
    <label>Departments using Product/Service</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Bionic SDR</fullName>
            </value>
            <value>
                <fullName>Cloud Solutions</fullName>
            </value>
            <value>
                <fullName>Creative Services</fullName>
            </value>
            <value>
                <fullName>Facilities</fullName>
            </value>
            <value>
                <fullName>Human Resources</fullName>
            </value>
            <value>
                <fullName>Inbound SDR</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Marketing &amp; Culture</fullName>
            </value>
            <value>
                <fullName>Outbound SDR</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Talent Solutions</fullName>
            </value>
            <value>
                <fullName>Executive Sales</fullName>
                <isActive>false</isActive>
                <label>Executive Sales</label>
            </value>
            <value>
                <fullName>Marketing &amp; Video</fullName>
                <isActive>false</isActive>
                <label>Marketing &amp; Video</label>
            </value>
            <value>
                <fullName>Marketing Services</fullName>
                <isActive>false</isActive>
                <label>Marketing Services</label>
            </value>
            <value>
                <fullName>Outbound Operations</fullName>
                <isActive>false</isActive>
                <label>Outbound Operations</label>
            </value>
            <value>
                <fullName>Outbound Pipeline</fullName>
                <isActive>false</isActive>
                <label>Outbound Pipeline</label>
            </value>
            <value>
                <fullName>Project Management</fullName>
                <isActive>false</isActive>
                <label>Project Management</label>
            </value>
            <value>
                <fullName>Technology &amp; Cloud</fullName>
                <isActive>false</isActive>
                <label>Technology &amp; Cloud</label>
            </value>
            <value>
                <fullName>Training &amp; Recruiting</fullName>
                <isActive>false</isActive>
                <label>Training &amp; Recruiting</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>