force-app/main/default/objects/Contract/fields/Description_of_Product_Service__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Product_Service__c</fullName>
    <label>Description of Product/Service</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>