force-app/main/default/objects/Contract/fields/End_Date_is_Today__c.field-meta.xml
<CustomField>
    <fullName>End_Date_is_Today__c</fullName>
    <formula>EndDate = TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date is Today</label>
    <type>Checkbox</type>
</CustomField>