force-app/main/default/objects/Contract/fields/Initial_Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Contract_Start_Date__c</fullName>
    <label>Initial Contract Start Date</label>
    <type>Date</type>
</CustomField>