force-app/main/default/objects/Contract/fields/President_Approver__c.field-meta.xml
<CustomField>
    <fullName>President_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>President Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contracts2</relationshipName>
    <type>Lookup</type>
</CustomField>