force-app/main/default/objects/Contract/fields/Product_Service_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Service_Name__c</fullName>
    <label>Product/Service Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>