force-app/main/default/objects/Contract/fields/Reasoning_for_Request__c.field-meta.xml
<CustomField>
    <fullName>Reasoning_for_Request__c</fullName>
    <label>Business Reason for Request</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>