force-app/main/default/objects/Contract/fields/Relationship_Owner__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The user in this field needs to be a Director or above.</inlineHelpText>
    <label>Relationship Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contracts3</relationshipName>
    <type>Lookup</type>
</CustomField>