force-app/main/default/objects/Contract/fields/Research_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Research_Analysis__c</fullName>
    <inlineHelpText>What competition was looked at and analyzed?</inlineHelpText>
    <label>Research Analysis</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>