force-app/main/default/objects/Contract/fields/Send_Expiration_Notice__c.field-meta.xml
<CustomField>
    <fullName>Send_Expiration_Notice__c</fullName>
    <formula>OR((( EndDate -CASE( OwnerExpirationNotice ,
&quot;120 Days&quot;,120,
&quot;90 Days&quot;,90,
&quot;60 Days&quot;,60,
&quot;45 Days&quot;,45,
&quot;30 Days&quot;,30,
&quot;15 Days&quot;,15,
0))-30)=TODAY(),
(( EndDate -CASE( OwnerExpirationNotice ,
&quot;120 Days&quot;,120,
&quot;90 Days&quot;,90,
&quot;60 Days&quot;,60,
&quot;45 Days&quot;,45,
&quot;30 Days&quot;,30,
&quot;15 Days&quot;,15,
0))-60)=TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Send Expiration Notice</label>
    <type>Checkbox</type>
</CustomField>