force-app/main/default/objects/Contract/fields/Software_Name__c.field-meta.xml
<CustomField>
    <fullName>Software_Name__c</fullName>
    <label>Software Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>