force-app/main/default/objects/Contract/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <label>Total Amount by Billing Cycle</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>