force-app/main/default/objects/Contract/fields/Total_Licenses__c.field-meta.xml
<CustomField>
    <fullName>Total_Licenses__c</fullName>
    <label>Total Licenses</label>
    <summarizedField>Service_Catalog__c.Total_Licenses__c</summarizedField>
    <summaryForeignKey>Service_Catalog__c.Contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>