force-app/main/default/objects/Contract/fields/Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price__c</fullName>
    <label>Cost per License</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>