force-app/main/default/objects/Contract/fields/VAR__c.field-meta.xml
<CustomField>
    <fullName>VAR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VAR</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>