force-app/main/default/objects/Contract/fields/Vendor_Contact_Information__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Contact_Information__c</fullName>
    <label>Vendor Contact Information</label>
    <type>TextArea</type>
</CustomField>