force-app/main/default/objects/Contract/fields/Vendor_Relations_Notes__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Relations_Notes__c</fullName>
    <label>Vendor Relations Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>