force-app/main/default/objects/Contract/fields/Vendor_Type__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Type__c</fullName>
    <label>Vendor Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hardware &amp; Tangible Property (laptops, headphones, monitors)</fullName>
            </value>
            <value>
                <fullName>Office/Facilities (repairs, maintenance, rent, office supplies)</fullName>
            </value>
            <value>
                <fullName>Professional Services (legal, 401k, payroll)</fullName>
            </value>
            <value>
                <fullName>Software/Technology (servicing clients)</fullName>
            </value>
            <value>
                <fullName>Sub-Contractors (servicing clients)</fullName>
            </value>
            <value>
                <fullName>Software/Technology, Sub-Contractors (servicing clients)</fullName>
                <isActive>false</isActive>
                <label>Software/Technology, Sub-Contractors (servicing clients)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>