force-app/main/default/objects/Contract/fields/VP_Approval__c.field-meta.xml
<CustomField>
    <fullName>VP_Approval__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VP Approval</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>