force-app/main/default/objects/Contract/fields/W_9_Attached__c.field-meta.xml
<CustomField>
    <fullName>W_9_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>W-9 Attached</label>
    <type>Checkbox</type>
</CustomField>