force-app/main/default/objects/Contract/fields/Within_Budget__c.field-meta.xml
<CustomField>
    <fullName>Within_Budget__c</fullName>
    <label>Within Budget?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>