force-app/main/default/objects/Contract/recordTypes/Abstrakt_Vender.recordType-meta.xml
<RecordType>
    <fullName>Abstrakt_Vender</fullName>
    <active>true</active>
    <label>Abstrakt Vendor</label>
</RecordType>