force-app/main/default/objects/Contract/validationRules/Must_provide_expiration_notice.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_provide_expiration_notice</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(TEXT( OwnerExpirationNotice ))</errorConditionFormula>
    <errorDisplayField>OwnerExpirationNotice</errorDisplayField>
    <errorMessage>Must provide an expiration notice</errorMessage>
</ValidationRule>