force-app/main/default/objects/Contract/validationRules/Required_for_Software.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_for_Software</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
 ISPICKVAL(Vendor_Type__c ,&apos;Software/Technology, Sub-Contractors (servicing clients)&apos;),
OR(
ISBLANK( StartDate ),
ISBLANK(  ContractTerm ),
ISBLANK(  TEXT(Billing_Period__c )),
ISBLANK(  Total_Amount__c ),
ISBLANK(  TEXT( Auto_Renewal__c )),
ISBLANK(  TEXT( Payment_Type__c ))))</errorConditionFormula>
    <errorMessage>Must populate all fields for software approval</errorMessage>
</ValidationRule>